--- a/extra/login.css
+++ b/extra/login.css
@@ -1,10 +1,38 @@
 body{
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .login-container{
     margin: 150px 0 0 0;
 }
+
+.space-up{
+    margin-top: 9px;
+}
+
+.login-mess{
+    padding-bottom: 50px;
+    color: black;
+    font-size: 30px !important;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.log-img-sec{
+    margin-top: 80px;
+}
+
+.login-img{
+    text-align: center;
+    padding: 7% 10%;
+    width: 600px;
+}
+
+.pass-spa{
+    margin-top: 50px;
+}
+
 
 .divider:after,
 .divider:before {
@@ -20,4 +48,44 @@ body{
   .h-custom {
     height: 100%;
   }
+}
+
+/* Buttons */
+.btn-login{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    width: 300px;
+    height: 70px;
+    margin-top: 25px;
+    border-radius: 20px !important;
+    margin-bottom: 18px ;
+    border-color: #2ECC71 !important;
+    color: #2ECC71 !important;;
+}
+
+.btn-register{
+        padding-left: 2.5rem;
+        padding-right: 2.5rem;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        width: 300px;
+        height: 70px;
+        margin-top: 25px;
+        border-radius: 20px !important;
+        margin-bottom: 18px ;
+        background-color: #2ECC71 !important;
+}
+.bold-size{
+    font-size: 25px !important;
+}
+
+.button-tab{
+    margin-right: 120px !important;
+}
+
+.pass-centre{
+    margin-left: auto ;
+    margin-right: auto ;
 }
