--- a/extra/login.css
+++ b/extra/login.css
@@ -4,7 +4,7 @@ body{
 }
 
 .login-container{
-    margin: 150px 0 0 0;
+    margin: 80px 0 0 0;
 }
 
 .space-up{
@@ -62,7 +62,17 @@ body{
     border-radius: 20px !important;
     margin-bottom: 18px ;
     border-color: #2ECC71 !important;
-    color: #2ECC71 !important;;
+    color: #2ECC71 !important;
+}
+
+
+/* .btn-login:hover{
+    background-color: #2ECC71 !important;
+} */
+
+.btn-outline-success:hover{
+    background-color: #2EEC71 !important;
+    color: #ffffff !important;
 }
 
 .btn-register{
