--- a/extra/register.css
+++ b/extra/register.css
@@ -4,7 +4,21 @@ body{
 }
 
 .login-container{
-    margin: 80px 0 0 0;
+    margin: 40px 0 0 0;
+}
+
+.card-style{
+    padding-left: 40px;
+    /* margin-right: 80px; */
+    padding-bottom: 50px;
+    border-radius: 15px !important;
+    
+}
+
+@media(min-width:990px){
+    .align-image{
+        margin-left: 60px !important;
+    }
 }
 
 .space-up{
@@ -14,7 +28,7 @@ body{
 .login-mess{
     padding-bottom: 50px;
     color: black;
-    font-size: 30px !important;
+    font-size: 25px !important;
     font-weight: 600;
     font-family: 'Montserrat', sans-serif;
 }
@@ -23,27 +37,29 @@ body{
     margin-top: 80px;
 }
 
-.card-registration .select-input.form-control[readonly]:not([disabled]) {
-    font-size: 1rem;
-    line-height: 2.15;
-    padding-left: .75em;
-    padding-right: .75em;
-  }
-  .card-registration .select-arrow {
-    top: 13px;
-  }
-
 .register-img{
     text-align: center;
     padding: 7% 10%;
-    width: 650px;
+    width: 120%;
     height: 700px;
 }
 
 .pass-spa{
-    margin-top: 50px;
+    margin-top: 25px;
 }
 
+.pass-color{
+    color: #2ECC71 !important;
+    margin-left: 0px !important;
+}
+
+.pass-color-acc{
+    margin-right: 20px !important;
+}
+
+b{
+    font-weight: 550 !important;
+}
 
 .divider:after,
 .divider:before {
@@ -115,7 +131,7 @@ body{
 /* Mobile Styles */
 @media(max-width: 800px){
     .register-img{
-        max-width: 100%;
+        max-width: 100% !important;
     }
 
     .button-tab{
