--- a/extra/register.css
+++ b/extra/register.css
@@ -132,6 +132,14 @@ b{
 @media(max-width: 800px){
     .register-img{
         max-width: 100% !important;
+        text-align: center;
+        padding: 7% 10%;
+        width: 600px;
+        height: 330px;
+    }
+
+    .card-style{
+        width: 100% !important;
     }
 
     .button-tab{
@@ -141,6 +149,28 @@ b{
 
     .login-container{
         margin-top: 0;
+    }
+
+    .width-mob{
+        width: 40%;
+        padding-right: 20px;
+    }
+
+    .tab-mob{
+        margin-right: auto !important;
+        margin-left: auto !important;
+        max-width: 100%;
+       
+    }
+
+    .btn-mob{
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+        width: 262px !important;
+    }
+
+    .bold-size{
+        font-size: 20px !important;
     }
 
     /* .mob-line{
