--- a/extra/login.css
+++ b/extra/login.css
@@ -116,6 +116,10 @@ body{
         margin-top: 0;
     }
 
+    .pass-spa{
+        margin-top: 30px !important;
+    }
+
     /* .mob-line{
         display: inline !important;
     } */
