--- a/extra/login.css
+++ b/extra/login.css
@@ -8,7 +8,21 @@ body{
 }
 
 .space-up{
-    margin-top: 9px;
+    margin-top: 13px;
+}
+
+.space-left
+{
+    padding-left: 0px !important;
+}
+
+.col-line{
+    position: relative !important;
+}
+
+.col-line-put{
+    position: absolute !important;
+
 }
 
 .login-mess{
@@ -65,6 +79,13 @@ body{
     color: #2ECC71 !important;
 }
 
+.form-style{
+    background: transparent !important;
+    border: none !important;
+    border-bottom: 1px solid #000000 !important;
+  
+}
+
 
 /* .btn-login:hover{
     background-color: #2ECC71 !important;
@@ -118,6 +139,18 @@ body{
 
     .pass-spa{
         margin-top: 30px !important;
+    }
+
+    .space-left{
+        padding-left: 50px !important;
+    }
+
+    .row-class{
+        position: relative !important;
+    }
+
+    .space-up{
+        position: absolute !important;
     }
 
     /* .mob-line{
