--- a/extra/register.css
+++ b/extra/register.css
@@ -12,12 +12,17 @@ body{
     /* margin-right: 80px; */
     padding-bottom: 50px;
     border-radius: 15px !important;
+    border: 0.3px solid !important;
     
 }
 
 @media(min-width:990px){
     .align-image{
         margin-left: 60px !important;
+    }
+
+    .card-align{
+        margin-left: 40px;
     }
 }
 
@@ -138,6 +143,20 @@ b{
         height: 330px;
     }
 
+    .space-up{
+        position: absolute !important;
+    }
+
+    .space-left{
+        padding-left: 50px !important;
+    }
+
+
+
+    .row-class{
+        position: relative !important;
+    }
+
     .card-style{
         width: 100% !important;
     }
@@ -154,6 +173,7 @@ b{
     .width-mob{
         width: 40%;
         padding-right: 20px;
+        padding-left: 20px;
     }
 
     .tab-mob{
