--- a/extra/desktop-6.css
+++ b/extra/desktop-6.css
@@ -86,12 +86,43 @@ color: white;
     position: fixed;
     height: 100%;
     overflow-x: hidden;
-    padding-top: 20px;
     border-left: 1px solid black;
+    padding-top: 10px;
     height: 100%;
-  
+  }
+
+  .container-img{
+      background-image: url('../img/desktop-6\ main.jpg');
+      width: 100%;
+      max-width: 100%;
+      height: 350px;
+  }
+
+  .card{
+      position: relative !important;
+      border-radius: 25px !important;
+      padding: 8px;
+      display: block;
+  }
+
+  .card-pos{
+        position: absolute;
+        top: 280px;
+        right: 780px;
   }
   
+  .tab-mob{
+    margin-right: auto !important;
+    margin-left: auto !important;
+    max-width: 100%;
+   
+}
+
+  .fluid-prop{
+      padding-left: 0px !important;
+      padding-right: 0px !important;
+  }
+
   /* Control the left side */
   .left {
     width: 17%;
