--- a/extra/desktop-6.css
+++ b/extra/desktop-6.css
@@ -139,12 +139,30 @@ color: white;
   .btn-mob{
       margin-right: 50px;
       border-radius: 30px !important;
+      margin-right: 0 !important;
+      padding-right: 80px !important;
+      padding-top: 15px !important;
+      padding-bottom: 15px !important;
+      font-size: 22px !important;
+      
   }
 
   .btn-mob-sec{
       margin-left: 50px;
       border-radius: 30px !important;
+      margin-right: 0 !important;
+      padding-right: 80px !important;
+      padding-top: 15px !important;
+      padding-bottom: 15px !important;
+      font-size: 22px !important;
+      background-color: #3A59FF !important;
+      border-color: #3A59FF !important;
   }
+
+  .fa-space{
+      padding-left: 10px;
+      padding-right: 15px;
+      }
 
 
   
