--- a/extra/desktop-6.css
+++ b/extra/desktop-6.css
@@ -164,6 +164,12 @@ color: white;
       padding-right: 15px;
       }
 
+      @media(min-width: 760px){
+          .mob-list-display{
+              display: none;
+          }
+      }
+
 
   
   /* Control the right side */
@@ -238,8 +244,33 @@ color: white;
         border: none;
         width: 100%;
         max-width: 100%;
-        height: 250px;
         padding-top: 0px;
+    }
+    .split{
+        overflow: visible;
+    }
+    .container-img{
+        height: 250px;
+    }
+    .card-pos{
+        left: 60px;
+        top: 200px;
+    }
+    .card-mob{
+        width: 138px !important;
+        height: 138px;
+    }
+    .card-img-top{
+        width: 120px !important;
+        height: 120px;
+    }
+    .mob-head{
+        font-size: 25px;
+        width:200px;
+    }
+    .mob-list-display{
+        padding-top: 180px;
+        padding-left: 60px;
     }
 }
 
