--- a/extra/My Profile.css
+++ b/extra/My Profile.css
@@ -14,24 +14,17 @@ font-size: large;
 color: white;
 }
 
-#fashion{
-    color:#2ECC71;
-    font-weight: 600;
-}
-
+/* 
+Navbar css starts */
 #searchbar{
    background-color: #F5F5F5;  
-}
-
-#discover{
-    font-weight: 400;
 }
 
 .nav-item{
     text-decoration: none;
 }
 
-.nav-back-style{
+.extra-nav-back-style{
     background-color: #2ECC71; 
     font-family: 'Montserrat', sans-serif;
 }
@@ -58,25 +51,11 @@ color: white;
     color: white;
 }
 
-.container-spaced{
-    padding: 2% 10% !important;
-}
-
-.container-align{
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-    margin-left: 0px !important;
-    margin-right: 0px !important;
-}
-
 .nav-cart-space{
     margin-right: 120px;
 }
 
-.container{
-    padding-top: 20px !important;
-    padding-bottom: 10px !important;
-}
+/* Nav style ends */
 
 .form-size{
     width: 50%;
@@ -89,40 +68,8 @@ color: white;
 }
 
 @media(max-width: 960px){
-    .nav-back-style{
-        background-color: #ffffff; 
-        font-family: 'Montserrat', sans-serif;
-        color: black;
-    }
-    .nav-back-style{
+    .extra-nav-back-style{
         display: none !important;
-    }
-    
-    .mob-color{
-        color: black !important;
-    }
-    .fa-color{
-        color: black;
-    }
-    .nav-button-mob{
-        display: none !important;
-    }
-    .form-size{
-        width: 100%;
-        border-radius: 25px !important;
-        padding-top: 15px;
-    }
-    .fa-color{
-        display: none !important;
-    }
-    .fa-color-front-loc{
-        color:  #2ECC71;
-    }
-    .mob-align-spa{
-        padding: 0px !important;
-    }
-    .mob-text{
-        font-size: 1.1rem !important;
     }
 }
 
@@ -175,6 +122,7 @@ form{
     
     min-width: 500px!important;
 }
+
 .formInput:focus{
     box-shadow:none !important;
   }
