--- a/extra/mycart.css
+++ b/extra/mycart.css
@@ -133,9 +133,9 @@
     border-radius: 50% !important;
     font-family: Arial;
     color: #000000;
-    font-size: 18px;
+    font-size: 14px;
     
-    border: solid #030303 1px !important;
+    border: solid grey 1px !important;
     text-decoration: none;
   }
   
