--- a/Buyer/extra/Specific Shop.css
+++ b/Buyer/extra/Specific Shop.css
@@ -1,3 +1,8 @@
+/* html {
+    height: 100%;
+    margin: auto;
+    width: 100%;
+  } */
 
 body{
     font-family: 'Montserrat', sans-serif;
@@ -81,9 +86,12 @@ color: white;
     width: 50%;
 }
 
+@media(min-width: 960px){
+    .split{
+        position: fixed;
+    }
+}
 .split {
-
-    position: fixed;
     height: 100%;
     overflow-x: hidden;
     border-left: 1px solid black;
@@ -123,11 +131,11 @@ color: white;
       padding-right: 0px !important;
   }
 
-  .row-pos{
+  /* .row-pos{
       position: absolute !important;
       top: 600px;
       right: 520px;
-  }
+  } */
 
   /* Control the left side */
   .left {
@@ -203,6 +211,14 @@ color: white;
     .fa-color-front{
         display: none !important;
     }
+    .extra-visible-mob{
+        display: none;
+    }
+    .card-pos{
+        width: 500px;
+        right: 460px;
+    }
+   
 }
 
 @media(max-width: 960px){
@@ -211,8 +227,15 @@ color: white;
         font-family: 'Montserrat', sans-serif;
         color: black;
     }
+    .extra-row-hide{
+        display: none !important;
+    }
+   
     .mob-color{
         color: black !important;
+    }
+    .extra-bold-size{
+        font-size: 16px;
     }
     .fa-color{
         color: black;
@@ -252,15 +275,16 @@ color: white;
         max-width: 100%;
         padding-top: 0px;
     }
-    .split{
+    /* .split{
         overflow: visible;
-    }
+    } */
     .container-img{
         height: 250px;
     }
     .card-pos{
         left: 60px;
-        top: 200px;
+        top: 310px;
+        width: 300px;
     }
     .card-mob{
         width: 138px !important;
@@ -275,7 +299,6 @@ color: white;
         width:200px;
     }
     .mob-list-display{
-        padding-top: 180px;
         padding-left: 60px;
     }
 }
