--- a/Buyer/extra/mycart.css
+++ b/Buyer/extra/mycart.css
@@ -47,6 +47,50 @@
     text-align: left !important;
 }
 
+
+/* 
+Nav side bar section */
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #2ECC71; ;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 160px;
+  }
+  
+  .sidenav a {
+    padding: 4px 4px 4px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: black;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
+  /* Section ends */
+
 .fa-color-5{
     color: #2ECC71;
 }
