--- a/Buyer/extra/Specifcproduct.css
+++ b/Buyer/extra/Specifcproduct.css
@@ -36,6 +36,10 @@
     background-color: #2EEC71 !important;
     color: #ffffff !important;
 }
+.extra-toggle-collapse{
+    color: #2a2a2a !important;
+    text-decoration: none !important;
+}
 
 .extra-img-adjust{
     max-width: 100% !important;
