--- a/Buyer/extra/Specifcproduct.css
+++ b/Buyer/extra/Specifcproduct.css
@@ -78,6 +78,9 @@
     .fa-color-front{
         display: none !important;
     }
+    .extra-desk-review{
+        text-align: left !important;
+    }
 }
 
 @media(max-width: 960px){
