--- a/Buyer/extra/home.css
+++ b/Buyer/extra/home.css
@@ -89,6 +89,9 @@ color: white;
     .fa-color-front{
         display: none !important;
     }
+    .fa-color-front-mob{
+        color: white !important;
+    }
 }
 
 @media(max-width: 960px){
