--- a/Buyer/extra/mycart.css
+++ b/Buyer/extra/mycart.css
@@ -207,6 +207,9 @@ Nav side bar section */
     .fa-color-front{
         display: none !important;
     }
+    .fa-color-front-mob{
+        color: white !important;
+    }
 }
 
 @media(max-width: 960px){
