--- a/Seller/extra/Seller Messages.css
+++ b/Seller/extra/Seller Messages.css
@@ -117,7 +117,8 @@ body,html{
 @media screen and (max-width: 768px) {
   .m3 {
     position: absolute;
-    margin-left: 200px;
+    margin-left: 150px;
+    width: 150px;
 
   }
 }
@@ -131,7 +132,7 @@ body,html{
 @media screen and (max-width: 576px) {
   .m3 {
     position: absolute;
-    margin-left: 190px;
+    margin-left: 150px;
   }
 }
 
