--- a/Buyer/extra/specificorder.css
+++ b/Buyer/extra/specificorder.css
@@ -16,21 +16,38 @@
     color: white !important;
     border-color: white !important;
 }
-/* 
-@media(max-width : 650px){
 
-    .bottom-nav{
-        position: relative;
-        min-height:100%;
-    }
-    .extra-nav-bottom{
-        position:absolute !important;
-        bottom:0 !important;
-        width:100% !important;
-    }
+@media(max-width : 850px){
+    .navbar-fin {
+        overflow: hidden;
+        background-color: #333;  
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 62px;
+      } 
+      .navbar-fin a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+      }
+      .navbar-fin a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+      .navbar-fin a.active {
+        background-color: #04AA6D;
+        color: white;
+      }
+      
+      .navbar-fin .icon {
+        display: none;
+      }      
 }
- */
-
 /* 
 Nav side bar section */
 .sidenav {
