--- a/Buyer/extra/Allshoplist.css
+++ b/Buyer/extra/Allshoplist.css
@@ -162,6 +162,45 @@ Nav side bar section */
     }
 }
 
+@media(min-width : 970px){
+    .navbar-fin{
+        display: none !important;
+    }
+}
+
+@media(max-width : 960px){
+    .navbar-fin {
+        overflow: hidden;
+        background-color: gray;  
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 62px;
+        left: 0;
+      } 
+      .navbar-fin a {
+        float: left;
+        display: block;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+      }
+      .navbar-fin a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+      .navbar-fin a.active {
+        background-color: #04AA6D;
+        color: white;
+      }
+      
+      .navbar-fin .icon {
+        display: none;
+      }      
+}
+
 @media(max-width: 960px){
     .img-res{
         max-width: 100% !important;
