--- a/Buyer/extra/Myorders.css
+++ b/Buyer/extra/Myorders.css
@@ -192,3 +192,36 @@ Nav side bar section */
         display: none;
     }
 }
+
+
+@media(max-width : 850px){
+    .navbar-fin {
+        overflow: hidden;
+        background-color: #333;  
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 62px;
+      } 
+      .navbar-fin a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+      }
+      .navbar-fin a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+      .navbar-fin a.active {
+        background-color: #04AA6D;
+        color: white;
+      }
+      
+      .navbar-fin .icon {
+        display: none;
+      }      
+}
