--- a/Buyer/extra/Myorders.css
+++ b/Buyer/extra/Myorders.css
@@ -194,10 +194,16 @@ Nav side bar section */
 }
 
 
-@media(max-width : 850px){
+@media(min-width : 970px){
+    .navbar-fin{
+        display: none !important;
+    }
+}
+
+@media(max-width : 960px){
     .navbar-fin {
         overflow: hidden;
-        background-color: #333;  
+        background-color: gray;  
         position: fixed;
         bottom: 0;
         width: 100%;
@@ -206,7 +212,7 @@ Nav side bar section */
       .navbar-fin a {
         float: left;
         display: block;
-        color: #f2f2f2;
+        color: black;
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
@@ -224,4 +230,7 @@ Nav side bar section */
       .navbar-fin .icon {
         display: none;
       }      
+      .extra-help-space{
+          margin-bottom: 60px !important;
+      }
 }
