--- a/Buyer/extra/Myorders.css
+++ b/Buyer/extra/Myorders.css
@@ -233,4 +233,7 @@ Nav side bar section */
       .extra-help-space{
           margin-bottom: 60px !important;
       }
+      .extra-mob-hide{
+          display: none;
+      }
 }
