--- a/Buyer/extra/Specifcproduct.css
+++ b/Buyer/extra/Specifcproduct.css
@@ -111,6 +111,32 @@
         display: none;
       }      
 }
+
+@media(min-width: 860px){
+    .mob-display-none{
+        display: none !important;
+    }
+}
+
+.extra-all-same{
+    border: 2px solid black;
+    background: transparent;
+    border-radius: 15px;
+    font-size: 18px !important;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+}
+
+.extra-all-same-active{
+    border: 2px solid #2ECC71 ;
+    background: transparent;
+    border-radius: 15px;
+    font-size: 18px !important;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+    width: 60px !important;
+}
+
 @media(max-width: 960px){
     
     .nav-back-style{
