--- a/Buyer/extra/Specifcproduct.css
+++ b/Buyer/extra/Specifcproduct.css
@@ -83,7 +83,7 @@
 @media(max-width : 960px){
     .navbar-fin {
         overflow: hidden;
-        background-color: gray;  
+        background-color: #2ECC71;  
         position: fixed;
         bottom: 0;
         width: 100%;
@@ -98,9 +98,9 @@
         text-decoration: none;
         font-size: 17px;
       }
-      .navbar-fin a:hover {
+      /* .navbar-fin a:hover {
         background-color: #ddd;
-        color: black;
+        color: black; */
       }
       .navbar-fin a.active {
         background-color: #04AA6D;
