--- a/Seller/extra/businessDetail.css
+++ b/Seller/extra/businessDetail.css
@@ -70,6 +70,10 @@
 
 @media(min-width:960px){
   .extra-desk-view{
-    width: 75% !important;
+    width: 60% !important;
   }
+}
+
+.extra-desk-view{
+  height: 692px !important;
 }
