--- a/Buyer/extra/Myorders.css
+++ b/Buyer/extra/Myorders.css
@@ -191,6 +191,9 @@ Nav side bar section */
     .img-mob{
         display: none;
     }
+    .extra-help-space{
+        margin-bottom: 60px;
+    }
 }
 
 
@@ -203,20 +206,21 @@ Nav side bar section */
 @media(max-width : 960px){
     .navbar-fin {
         overflow: hidden;
-        background-color: gray;  
+        background-color: white;  
         position: fixed;
         bottom: 0;
         width: 100%;
         height: 62px;
+        border-top: 1px solid black;
       } 
       .navbar-fin a {
         float: left;
         display: block;
         color: black;
         text-align: center;
-        padding: 14px 16px;
+        padding: 14px 8px;
         text-decoration: none;
-        font-size: 17px;
+        font-size: 14px;
       }
       .navbar-fin a:hover {
         background-color: #ddd;
@@ -229,11 +233,18 @@ Nav side bar section */
       
       .navbar-fin .icon {
         display: none;
-      }      
-      .extra-help-space{
-          margin-bottom: 60px !important;
-      }
-      .extra-mob-hide{
+      }  
+      
+      .extra-mob-out{
           display: none;
       }
+      .extra-mob-hide{
+          margin-top: 0px !important;
+      }
+}
+
+@media(min-width: 960px){
+    .extra-mob-hide{
+        margin-top: 48px !important;
+    }
 }
