--- a/Buyer/extra/mycart.css
+++ b/Buyer/extra/mycart.css
@@ -297,20 +297,21 @@ Nav side bar section */
 @media(max-width : 960px){
     .navbar-fin {
         overflow: hidden;
-        background-color: gray;  
+        background-color: white;  
         position: fixed;
         bottom: 0;
         width: 100%;
         height: 62px;
+        border-top: 1px solid black;
       } 
       .navbar-fin a {
         float: left;
         display: block;
         color: black;
         text-align: center;
-        padding: 14px 16px;
+        padding: 14px 8px;
         text-decoration: none;
-        font-size: 17px;
+        font-size: 14px;
       }
       .navbar-fin a:hover {
         background-color: #ddd;
@@ -323,5 +324,5 @@ Nav side bar section */
       
       .navbar-fin .icon {
         display: none;
-      }      
+      }    
 }
