--- a/Buyer/extra/specificorder.css
+++ b/Buyer/extra/specificorder.css
@@ -20,20 +20,21 @@
 @media(max-width : 850px){
     .navbar-fin {
         overflow: hidden;
-        background-color: #333;  
+        background-color: white;  
         position: fixed;
         bottom: 0;
         width: 100%;
         height: 62px;
+        border-top: 1px solid black;
       } 
       .navbar-fin a {
         float: left;
         display: block;
-        color: #f2f2f2;
+        color: black;
         text-align: center;
-        padding: 14px 16px;
+        padding: 14px 8px;
         text-decoration: none;
-        font-size: 17px;
+        font-size: 14px;
       }
       .navbar-fin a:hover {
         background-color: #ddd;
