--- a/Buyer/extra/Allshoplist.css
+++ b/Buyer/extra/Allshoplist.css
@@ -181,7 +181,7 @@ Nav side bar section */
       .navbar-fin a {
         float: left;
         display: block;
-        color: black;
+        color: #656565;
         text-align: center;
         padding: 14px 8px;
         text-decoration: none;
